--- a/.env.proxy
+++ b/.env.proxy
@@ -1,5 +1,5 @@
-AI_PROXY_ENDPOINT=<YOUR_AZURE_AI_PROXY_ENDPOINT>
-AI_PROXY_KEY=<YOUR_AZURE_AI_PROXY_KEY>
+AI_PROXY_ENDPOINT=https://polite-ground-030dc3103.4.azurestaticapps.net/api/v1
+AI_PROXY_KEY=8ecb8b55-d385-403d-b7f0-040d7ec6f27d
 
 # These connection are for running the intent promotflow
 SUPPORT_ENDPOINT = ""
